--- a/index.html
+++ b/index.html
@@ -22,37 +22,35 @@
             <div class="flex center">
                 <img class="profile" src="https://avatars3.githubusercontent.com/u/2858049" />
             </div>
-            <p class="body">Web Programmer, Michigan State Computer Science, too curious for my own good.</p>
-            <!-- ǔǜǔĀƈǔǌƌ¸ƐƔǘ >> 2 if you wish to reach me by email. -->
+            <p class="body">Software Engineer @ MORSE Corp., Web Programmer, Michigan State Computer Science grad.</p>
+            <!-- hire me at busc dot dev if you wish to reach me by email. -->
             <h2>Working on</h2>
             <ul class="flex things">
                 <li><a href="https://forfect.app" target="_blank">WebCAT <i class="fad fa-link"></i></a></li>
-                <li><a href="https://cedr.dev" target="_blank">Cedr <i class="fad fa-link"></i></a></li>
+                <!--<li><a href="https://cedr.dev" target="_blank">Cedr <i class="fad fa-link"></i></a></li>-->
             </ul>
             <h2>Working with</h2>
             <ul class="flex things">
-                <li>Elixir</li>
-                <li>Elm</li>
+                <li>Python/Django</li>
+                <li>Nix</li>
             </ul>
             <h2>Learning</h2>
             <ul class="flex things">
                 <li>Haskell</li>
                 <li>Ergodox</li>
-                <li>NixOS</li>
                 <li>Emacs</li>
             </ul>
             <h2>Interested in</h2>
             <ul class="flex things">
                 <li>PureScript</li>
-                <li>Drones</li>
-                <li>Autonomous Vehicles</li>
+                <li>Infrastructure Automation</a>
             </ul>
             <br>
             <ul class="flex social">
                 <li><a href="https://github.com/bbuscarino" target="_blank"><i class="fab fa-github"></i></a></li>
                 <li><a href="https://www.linkedin.com/in/bbuscarino/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
                 <li><a href="https://twitter.com/bjbuscarino" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="https://www.twitch.tv/goingprod" target="_blank"><i class="fab fa-twitch"></i></a></li>
+                <!--<li><a href="https://www.twitch.tv/goingprod" target="_blank"><i class="fab fa-twitch"></i></a></li>-->
                 <li><a href="https://raw.githubusercontent.com/bbuscarino/busc.dev/master/resume.pdf"><i class="fas fa-file-user"></i></a></li>
             </ul>
         </div>
