--- a/index.html
+++ b/index.html
@@ -22,27 +22,28 @@
             <div class="flex center">
                 <img class="profile" src="https://avatars3.githubusercontent.com/u/2858049" />
             </div>
-            <p class="body">Software Engineer @ MORSE Corp., Web Programmer, Michigan State Computer Science grad.</p>
+            <p class="body">Software Engineer @ MORSE Corp., Infrastructure and Dev Tools, Michigan State Computer Science grad.</p>
             <!-- hire me at busc dot dev if you wish to reach me by email. -->
             <h2>Working on</h2>
             <ul class="flex things">
-                <li><a href="https://forfect.app" target="_blank">WebCAT <i class="fad fa-link"></i></a></li>
-                <!--<li><a href="https://cedr.dev" target="_blank">Cedr <i class="fad fa-link"></i></a></li>-->
+                <li>Data Engineering Infrastructure</li>
+                <li>Knowledge Management Innovation</li>
+                <li>Open Source</li>
             </ul>
             <h2>Working with</h2>
             <ul class="flex things">
-                <li>Python/Django</li>
+                <li>Python</li>
+                <li>Rust</li>
                 <li>Nix</li>
             </ul>
             <h2>Learning</h2>
             <ul class="flex things">
-                <li>Haskell</li>
-                <li>Ergodox</li>
-                <li>Emacs</li>
+                <li>Advanced Nix</li>
+                <li>(Still) Emacs</li>
             </ul>
             <h2>Interested in</h2>
             <ul class="flex things">
-                <li>PureScript</li>
+                <li>IDL Design</li>
                 <li>Infrastructure Automation</a>
             </ul>
             <br>
