--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h2>Interested in</h2>
             <ul class="flex things">
                 <li>IDL Design</li>
-                <li>Infrastructure Automation</a>
+                <li>Infrastructure Automation</li>
             </ul>
             <br>
             <ul class="flex social">
