--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <ul class="flex things">
                 <li>Data Engineering Infrastructure</li>
                 <li>Knowledge Management Innovation</li>
-                <li>Open Source</li>
+                <li>Open Source (A Little)</li>
             </ul>
             <h2>Working with</h2>
             <ul class="flex things">
@@ -43,16 +43,15 @@
             </ul>
             <h2>Interested in</h2>
             <ul class="flex things">
-                <li>IDL Design</li>
+                <li>Language Design</li>
                 <li>Infrastructure Automation</li>
             </ul>
             <br>
             <ul class="flex social">
                 <li><a href="https://github.com/bbuscarino" target="_blank"><i class="fab fa-github"></i></a></li>
-                <li><a href="https://www.linkedin.com/in/bbuscarino/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+                <!--<li><a href="https://www.linkedin.com/in/bbuscarino/" target="_blank"><i class="fab fa-linkedin"></i></a></li>-->
                 <li><a href="https://twitter.com/bjbuscarino" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                <!--<li><a href="https://www.twitch.tv/goingprod" target="_blank"><i class="fab fa-twitch"></i></a></li>-->
-                <li><a href="https://raw.githubusercontent.com/bbuscarino/busc.dev/master/resume.pdf"><i class="fas fa-file-user"></i></a></li>
+                <!--<li><a href="https://raw.githubusercontent.com/bbuscarino/busc.dev/master/resume.pdf"><i class="fas fa-file-user"></i></a></li>-->
             </ul>
         </div>
         <div id="snow-particles"></div>
